layout/base/nsCSSRendering.cpp
@@ -1365,8 +1365,6 @@ nsCSSRendering::PaintBackgroundWithSC(nsPresContext* aPresContext,
 
   // Compute the Thebes equivalent of the dirtyRect.
   gfxRect dirtyRectGfx(RectToGfxRect(dirtyRect, appUnitsPerPixel));
-  dirtyRectGfx.Round();
-  dirtyRectGfx.Condition();
   if (dirtyRectGfx.IsEmpty()) {
     NS_WARNING("converted dirty rect should not be empty");
     return;
@@ -1404,7 +1402,7 @@ nsCSSRendering::PaintBackgroundWithSC(nsPresContext* aPresContext,
   // this far.)
   if (!drawBackgroundImage) {
     ctx->NewPath();
-    ctx->Rectangle(dirtyRectGfx);
+    ctx->Rectangle(dirtyRectGfx, PR_TRUE);
     ctx->Fill();
     return;
   }
@@ -1423,7 +1421,7 @@ nsCSSRendering::PaintBackgroundWithSC(nsPresContext* aPresContext,
       !(status & imgIRequest::STATUS_SIZE_AVAILABLE)) {
     if (drawBackgroundColor) {
       ctx->NewPath();
-      ctx->Rectangle(dirtyRectGfx);
+      ctx->Rectangle(dirtyRectGfx, PR_TRUE);
       ctx->Fill();
     }
     return;
@@ -1531,7 +1529,7 @@ nsCSSRendering::PaintBackgroundWithSC(nsPresContext* aPresContext,
   // even if the image isn't.
   if (drawBackgroundColor) {
     ctx->NewPath();
-    ctx->Rectangle(dirtyRectGfx);
+    ctx->Rectangle(dirtyRectGfx, PR_TRUE);
     ctx->Fill();
   }
 
